--- a/style.css
+++ b/style.css
@@ -54,3 +54,57 @@ html,body{
 #nav h2:nth-last-child(1){
     width: 10%;
 }
+
+#center{
+    height: 90vh;
+    width: 100%;
+    position: relative;
+    padding: 3vw;
+}
+
+#content{
+    height: 100%;
+    width: 100%;
+    background-color: blue;
+    position: relative;
+}
+
+#content video{
+    height: 100%;
+    width: 100%;
+    object-fit:cover;
+    object-position:20% 35%;
+}
+
+#overlay{
+    height: 40%;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    /* background-color: red; */
+    padding: 2vw;
+    color: #fff;
+}
+
+#over1{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#over1 h1{
+     border-bottom: 2px solid #fff;
+    font-family: monument;
+    width: 100%;
+    font-size:2.5vw ;
+    font-weight: 600;
+}
+
+#over2
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1vw 0;
+}
+
