--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ html,body{
     background-color: rgba(0, 0, 0, 0.274);
     padding: 2vw;
     color: #fff;
-backdrop-filter: blur(10px);
+backdrop-filter: blur(2px);
 }
 
 #over1{
@@ -108,3 +108,28 @@ backdrop-filter: blur(10px);
     padding: 1vw 0;
 }
 
+#scroll{
+    height: 40vh;
+    width: 100%;
+    /* background-color: red; */
+    white-space: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
+#container{
+height: 100%;
+width: 100%;
+/* background-color: blue; */
+display: inline-block;
+padding: 2vw;
+}
+
+#scroll img{
+   margin: 1vw;
+    height: 100%;
+    border-radius: 50%;
+   width: 15%;
+   object-fit: cover;
+   object-position: top;
+}
