--- a/style.css
+++ b/style.css
@@ -158,12 +158,6 @@ animation-timing-function: linear;
     border-bottom: 2px solid #000;
 }
 
-#page2{
-    height: 100%;
-    width: 100%;
-
-}
-
 #alphabet h5{
     font-size: 1.5vw;
     text-transform: uppercase;
@@ -184,7 +178,35 @@ animation-timing-function: linear;
    transition: all ease 0.2s;
 }
   
-
 h6:hover{
   border: 1px solid #000;
+}
+
+
+#page2{
+    height: 100%;
+    width: 100%;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+    padding: 2vw 5vw;
+}
+
+#page2-part1{
+    height: 100%;
+    width: 50%;
+    background-size: cover;
+    background-position: top;
+    background-image: url(https://images.unsplash.com/photo-1620993208551-ec648b0468bb?q=80&w=735&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+}
+
+#page2-part2{
+      height: 100%;
+    width: 46%;
+}
+
+#page2-part2 img{
+    height: 70%;
+    width:100% ;
+    object-fit: cover;
 }
