--- a/style.css
+++ b/style.css
@@ -210,3 +210,26 @@ h6:hover{
     width:100% ;
     object-fit: cover;
 }
+
+#page2-text{
+    height: 30%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#page2-text h1{
+    width: 30%;
+   padding-right: 20px;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+
+#page2-text p{
+    width: 70%;
+ padding-left: 20px;
+    font-size: 15px;
+    font-weight: 500;
+}
